--- a/.gitmodules
+++ b/.gitmodules
@@ -2,8 +2,10 @@
 	path = FV3
 	#url = https://github.com/NOAA-GSD/fv3atm
 	#branch = gsd/develop
-	url = https://github.com/climbfuji/fv3atm
-	branch = mynnsfclay_from_joe_in_latest_code
+	#url = https://github.com/climbfuji/fv3atm
+	#branch = mynnsfclay_from_joe_in_latest_code
+	url = https://github.com/NOAA-GSD/fv3atm
+	branch = mynnsfclay_from_joe_in_latest_code_without_reversing_composites_in_typedefs_20200319
 [submodule "NEMS"]
 	path = NEMS
 	url = https://github.com/NOAA-EMC/NEMS
