Regression test for gsd-chem in ccpp based on ccpp_gfdlmp test

--- a/tests/fv3_conf/ccpp_gfdlmp_run.IN
+++ b/tests/fv3_conf/ccpp_gfdlmp_run.IN
@@ -36,6 +36,11 @@ cp    @[RTPWD]/FV3_input_data/diag_table_gfdlmp diag_table
 cp    @[RTPWD]/FV3_input_data/field_table_gfdlmp field_table
 cp    @[RTPWD]/FV3_input_data/*configure .
 
+if [ $CPLCHM = .T. ]; then
+cp    @[RTPWD]/CCPP_gsd_chem_input_data/C384/INPUT/* INPUT/.
+cp    @[RTPWD]/CCPP_gsd_chem_input_data/C384/*table* .
+fi
+
 if [ $CPLWAV = .T. ]; then
 cp    @[RTPWD]/WW3_input_data/mod_def.* .
 cp    @[RTPWD]/WW3_input_data/@[SYEAR]@[SMONTH]@[SDAY]/ww3_multi.inp .
