--- a/tests/rt.conf
+++ b/tests/rt.conf
@@ -71,8 +71,9 @@ COMPILE | CCPP=Y SUITES=FV3_GFS_2017,FV3_GFS_2017_stretched 32BIT=Y DEBUG=Y     
 RUN     | fv3_ccpp_control_debug                                                                                                         | standard    |                | fv3         |
 RUN     | fv3_ccpp_stretched_nest_debug                                                                                                  | standard    |                | fv3         |
 
-COMPILE | CCPP=Y SUITES=FV3_GFS_2017_gfdlmp,FV3_GFS_2017_gfdlmp_noahmp                                                                   | standard    |                | fv3         |
+COMPILE | CCPP=Y SUITES=FV3_GFS_2017_gfdlmp,FV3_GFS_2017_gfdlmp_noahmp,FV3_GFS_2017_gfdlmp_gsd_chem                                      | standard    |                | fv3         |
 RUN     | fv3_ccpp_gfdlmp                                                                                                                | standard    |                | fv3         |
+RUN     | fv3_ccpp_gfdlmp_gsd_chem                                                                                                       | standard    |                | fv3         |
 RUN     | fv3_ccpp_gfdlmprad_gwd                                                                                                         | standard    |                | fv3         |
 RUN     | fv3_ccpp_gfdlmprad_noahmp                                                                                                      | standard    |                | fv3         |
 RUN     | fv3_ccpp_gfdlmp_hwrfsas                                                                                                        | standard    | wcoss_cray     | fv3         |
