--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "FV3"]
 	path = FV3
-	url = https://github.com/NOAA-GSD/fv3atm
+	url = https://github.com/SamuelTrahanNOAA/fv3atm
 	branch = gsd/develop-chem
 [submodule "NEMS"]
 	path = NEMS
