--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "FV3"]
 	path = FV3
 	url = https://github.com/SamuelTrahanNOAA/fv3atm
-	branch = gsd/develop-chem
+	branch = feature/v2-ca-pert-gbbepx
 [submodule "NEMS"]
 	path = NEMS
 	url = https://github.com/NOAA-EMC/NEMS
