Somehow, everything in the prior automatic merge was not merged. This commit corrects it, updating the FV3 to the top of gsd/develop-chem and adding the two new regression tests.

--- a/tests/rt.conf
+++ b/tests/rt.conf
@@ -73,7 +73,9 @@ RUN     | fv3_ccpp_stretched_nest_debug                                         
 
 COMPILE | CCPP=Y SUITES=FV3_GFS_2017_gfdlmp,FV3_GFS_2017_gfdlmp_noahmp,FV3_GFS_2017_gfdlmp_gsd_chem                                      | standard    |                | fv3         |
 RUN     | fv3_ccpp_gfdlmp                                                                                                                | standard    |                | fv3         |
-RUN     | fv3_ccpp_gfdlmp_gsd_chem                                                                                                       | standard    |                | fv3         |
+RUN     | fv3_ccpp_gfdlmp_gsd_chem                                                                                                       | standard    | hera.intel     | fv3         |
+RUN     | fv3_ccpp_gfdlmp_gsd_chem_sppt                                                                                                  | standard    | hera.intel     | fv3         |
+RUN     | fv3_ccpp_gfdlmp_gsd_chem_ca                                                                                                    | standard    | hera.intel     | fv3         |
 RUN     | fv3_ccpp_gfdlmprad_gwd                                                                                                         | standard    |                | fv3         |
 RUN     | fv3_ccpp_gfdlmprad_noahmp                                                                                                      | standard    |                | fv3         |
 RUN     | fv3_ccpp_gfdlmp_hwrfsas                                                                                                        | standard    | wcoss_cray     | fv3         |
