--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,9 @@
 [submodule "FV3"]
 	path = FV3
-	url = https://github.com/NOAA-GSL/fv3atm
-	branch = gsd/develop-chem
+	#url = https://github.com/NOAA-GSL/fv3atm
+	#branch = gsl/develop-chem
+	url = https://github.com/climbfuji/fv3atm
+	branch = gsl_develop_chem_add_gocart
 [submodule "NEMS"]
 	path = NEMS
 	url = https://github.com/NOAA-EMC/NEMS
