--- a/tests/rt_ccpp_dev.conf
+++ b/tests/rt_ccpp_dev.conf
@@ -35,6 +35,11 @@ RUN     | fv3_gsd_drag_suite_unified_ugwp                                       
 RUN     | fv3_rap                                                                                                           |                | fv3         |
 RUN     | fv3_hrrr                                                                                                          |                | fv3         |
 
+COMPILE | APP=ATM REPRO=Y SUITES=FV3_GFS_2017_gfdlmp_gsd_chem                                                               |                | fv3         |
+RUN     | fv3_gfdlmp_gsd_chem                                                                                               |                | fv3         |
+RUN     | fv3_gfdlmp_gsd_chem_sppt                                                                                          |                | fv3         |
+RUN     | fv3_gfdlmp_gsd_chem_ca                                                                                            |                | fv3         |
+
 # Compile without suite argument for CAPS physics
 COMPILE | APP=ATM REPRO=Y                                                                                                   |                | fv3         |
 # Run tests
@@ -55,5 +60,9 @@ RUN     | fv3_gsd_noah_mynnsfc_debug                                            
 RUN     | fv3_thompson_no_aero_debug                                                                                        |                | fv3         |
 
 COMPILE | APP=ATM 32BIT=Y DEBUG=Y SUITES=FV3_GSD_SAR,FV3_RAP,FV3_HRRR                                                       |                | fv3         |
-# Run tests
 RUN     | fv3_gsd_sar_debug                                                                                                 |                | fv3         |
+
+COMPILE | APP=ATM DEBUG=Y SUITES=FV3_GFS_2017_gfdlmp_gsd_chem                                                               |                | fv3         |
+RUN     | fv3_gfdlmp_gsd_chem_debug                                                                                         |                | fv3         |
+RUN     | fv3_gfdlmp_gsd_chem_sppt_debug                                                                                    |                | fv3         |
+RUN     | fv3_gfdlmp_gsd_chem_ca_debug                                                                                      |                | fv3         |
