--- a/tests/fv3_conf/gfdlmp_run.IN
+++ b/tests/fv3_conf/gfdlmp_run.IN
@@ -36,6 +36,16 @@ cp    @[INPUTDATA_ROOT]/FV3_input_data/diag_table_gfdlmp diag_table
 cp    @[INPUTDATA_ROOT]/FV3_input_data/field_table_gfdlmp field_table
 cp    @[INPUTDATA_ROOT]/FV3_input_data/*configure .
 
+if [ $CPLCHM = .T. ]; then
+#cp    @[INPUTDATA_ROOT]/GSD_CHEM_input_data/C384/INPUT/* INPUT/.
+#cp    @[INPUTDATA_ROOT]/GSD_CHEM_input_data/C384/*table* .
+# DH* TEMPORARY
+cp     @[INPUTDATA_ROOT]/FV3_input_data_ugwpv1/seaice_newland.grb .
+cp /scratch2/BMC/wrfruc/Samuel.Trahan/perturb-smoke/RT/NEMSfv3gfs/develop-20200929/INTEL/CCPP_gsd_chem_input_data/C384/INPUT/* INPUT/.
+cp /scratch2/BMC/wrfruc/Samuel.Trahan/perturb-smoke/RT/NEMSfv3gfs/develop-20200929/INTEL/CCPP_gsd_chem_input_data/C384/*table* .
+# *DH
+fi
+
 if [ $CPLWAV = .T. ]; then
 cp    @[INPUTDATA_ROOT_WW3]/mod_def.* .
 cp    @[INPUTDATA_ROOT_WW3]/@[SYEAR]@[SMONTH]@[SDAY]/ww3_multi.inp .
