--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,9 +40,10 @@ set(STOCH_PHYS      OFF CACHE BOOL "Enable Stochastic Physics")
 set(NEMSdatm        OFF CACHE BOOL "Enable NEMSdatm")
 set(CMEPS           OFF CACHE BOOL "Enable CMEPS")
 set(CDEPS           OFF CACHE BOOL "Enable CDEPS")
+set(GOCART          OFF CACHE BOOL "Enable GOCART")
 
 # Valid applications and choices
-list(APPEND VALID_APPS ATM ATMW S2S S2SW DATM DATM_NEMS)
+list(APPEND VALID_APPS ATM ATMC ATMW S2S S2SW DATM DATM_NEMS)
 set(APP NONE CACHE BOOL "Application Name")
 if(NOT (APP IN_LIST VALID_APPS))
   message(FATAL_ERROR "${APP} is not a valid application.\nValid Applications are: ${VALID_APPS}")
@@ -223,6 +224,24 @@ endif()
 
 if(CICE6)
   add_subdirectory(CICE-interface)
+endif()
+
+###############################################################################
+### Chemistry Components [GOCART]
+###############################################################################
+if(GOCART)
+    # this will look for MAPL ?
+  #set(BUILD_UFS ON CACHE BOOL "Enable UFS build of GOCART")
+  #add_subdirectory(gocart)
+  list(APPEND _gocart_srcs gocart/Process_Library/Chem_MieTableMod2G.F90
+                           gocart/Process_Library/GOCART2G_Process.F90)
+  add_library(gocart ${_gocart_srcs})
+  target_compile_definitions(gocart PRIVATE "HAS_NETCDF3")
+  #set_target_properties(gocart PROPERTIES Fortran_MODULE_DIRECTORY
+  #                                        ${CMAKE_CURRENT_BINARY_DIR}/mod)
+  #target_include_directories(gocart PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/NEMS/src)
+  #target_include_directories(ufs INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/mod>
+  #                                         $<INSTALL_INTERFACE:mod>)
 endif()
 
 ###############################################################################
