--- a/tests/rt_ccpp_dev.conf
+++ b/tests/rt_ccpp_dev.conf
@@ -38,7 +38,7 @@ RUN     | fv3_hrrr                                                              
 COMPILE | APP=ATM REPRO=Y SUITES=FV3_GFS_2017_gfdlmp_gsd_chem                                                               |                | fv3         |
 RUN     | fv3_gfdlmp_gsd_chem                                                                                               |                | fv3         |
 RUN     | fv3_gfdlmp_gsd_chem_sppt                                                                                          |                | fv3         |
-RUN     | fv3_gfdlmp_gsd_chem_ca                                                                                            |                | fv3         |
+RUN     | fv3_gfdlmp_gsd_chem_ca                                                                                            |+ hera.intel    | fv3         |
 
 # Compile without suite argument for CAPS physics
 COMPILE | APP=ATM REPRO=Y                                                                                                   |                | fv3         |
@@ -65,4 +65,4 @@ RUN     | fv3_gsd_sar_debug                                                     
 COMPILE | APP=ATM DEBUG=Y SUITES=FV3_GFS_2017_gfdlmp_gsd_chem                                                               |                | fv3         |
 RUN     | fv3_gfdlmp_gsd_chem_debug                                                                                         |                | fv3         |
 RUN     | fv3_gfdlmp_gsd_chem_sppt_debug                                                                                    |                | fv3         |
-RUN     | fv3_gfdlmp_gsd_chem_ca_debug                                                                                      |                | fv3         |
+RUN     | fv3_gfdlmp_gsd_chem_ca_debug                                                                                      |+ hera.intel    | fv3         |
