--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "FV3"]
   path = FV3
   url = https://github.com/NOAA-GSL/fv3atm
-  branch = gsl/develop
+  branch = RRFS_cloud
 [submodule "NEMS"]
   path = NEMS
   url = https://github.com/NOAA-EMC/NEMS
