Fix problems with regression tests

--- a/tests/rt_ccpp_dev.conf
+++ b/tests/rt_ccpp_dev.conf
@@ -40,9 +40,7 @@ RUN     | fv3_gfdlmp_gsd_chem                                                   
 RUN     | fv3_gfdlmp_gsd_chem_sppt                                                                                          |                | fv3         |
 RUN     | fv3_gfdlmp_gsd_chem_ca                                                                                            |+ hera.intel    | fv3         |
 
-# Compile without suite argument for CAPS physics
-COMPILE | APP=ATM REPRO=Y                                                                                                   |                | fv3         |
-# Run tests
+COMPILE | APP=ATM REPRO=Y SUITES=FV3_GFS_2017_shinhong,FV3_GFS_2017_ysu,FV3_GFS_2017_ntiedtke                               |                | fv3         |
 RUN     | fv3_shinhong                                                                                                      |                | fv3         |
 RUN     | fv3_ysu                                                                                                           |                | fv3         |
 RUN     | fv3_ntiedtke                                                                                                      |                | fv3         |
