--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,9 @@
 [submodule "FV3"]
   path = FV3
-  url = https://github.com/NOAA-GSL/fv3atm
-  branch = gsl/develop-chem
+  #url = https://github.com/NOAA-GSL/fv3atm
+  #branch = gsl/develop-chem
+  url = https://github.com/climbfuji/fv3atm
+  branch = move-all-gsd-chem-process-modules
 [submodule "NEMS"]
   path = NEMS
   url = https://github.com/NOAA-EMC/NEMS
@@ -20,8 +22,10 @@
   branch = gsl/develop
 [submodule "gocart"]
   path = gocart-interface/gocart
-  url = https://github.com/NOAA-GSL/GOCART
-  branch = gsl/develop-chem
+  #url = https://github.com/NOAA-GSL/GOCART
+  #branch = gsl/develop-chem
+  url = https://github.com/climbfuji/GOCART
+  branch = move-all-gsd-chem-process-modules
 [submodule "CMakeModules"]
   path = CMakeModules
   url = https://github.com/NOAA-EMC/CMakeModules
