Force 64bit for several GSD chemistry modules in the GOCART repository, update submodule pointer for gocart-interface/gocart

--- a/gocart-interface/CMakeLists.txt
+++ b/gocart-interface/CMakeLists.txt
@@ -38,6 +38,54 @@ list(APPEND _gocart_srcs gocart/Process_Library/aero_soa_vbs_data_mod.F90
                          gocart/Process_Library/GOCART2G_Process.F90)
 add_library(gocart ${_gocart_srcs})
 
+# Force 64bit for files that are just too hard to change
+if(32BIT)
+  if(CMAKE_Fortran_COMPILER_ID MATCHES "Intel")
+    set (CMAKE_Fortran_FLAGS_64bit "${CMAKE_Fortran_FLAGS}")
+    if(REPRO)
+      string (REPLACE "-i4 -real-size 32" "-i4 -real-size 64" CMAKE_Fortran_FLAGS_64bit "${CMAKE_Fortran_FLAGS_64bit}")
+    else()
+      string (REPLACE "-i4 -real-size 32" "-i4 -real-size 64 -no-prec-div -no-prec-sqrt" CMAKE_Fortran_FLAGS_64bit "${CMAKE_Fortran_FLAGS_64bit}")
+    endif()
+  elseif(CMAKE_Fortran_COMPILER_ID MATCHES "GNU")
+    set(CMAKE_Fortran_FLAGS_64bit "${CMAKE_Fortran_FLAGS_64bit} -fdefault-real-8")
+  endif()
+  SET_SOURCE_FILES_PROPERTIES(gocart/Process_Library/aero_soa_vbs_data_mod.F90
+                         gocart/Process_Library/dep_dry_gocart_mod.F90
+                         gocart/Process_Library/dep_dry_mod.F90
+                         gocart/Process_Library/dep_simple_mod.F90
+                         gocart/Process_Library/dep_vertmx_mod.F90
+                         gocart/Process_Library/dep_wet_ls_mod.F90
+                         gocart/Process_Library/dust_afwa_mod.F90
+                         gocart/Process_Library/dust_data_mod.F90
+                         gocart/Process_Library/dust_fengsha_mod.F90
+                         gocart/Process_Library/dust_gocart_mod.F90
+                         gocart/Process_Library/gocart_aerosols_mod.F90
+                         gocart/Process_Library/gocart_chem_mod.F90
+                         gocart/Process_Library/gocart_diag_mod.F90
+                         gocart/Process_Library/gocart_dmsemis_mod.F90
+                         gocart/Process_Library/gocart_settling_mod.F90
+                         gocart/Process_Library/gsd_chem_config.F90
+                         gocart/Process_Library/gsd_chem_constants.F90
+                         gocart/Process_Library/opt_aer_mod.F90
+                         gocart/Process_Library/opt_aer_out_mod.F90
+                         gocart/Process_Library/opt_aer_ra_mod.F90
+                         gocart/Process_Library/opt_averaging_mod.F90
+                         gocart/Process_Library/opt_data_mod.F90
+                         gocart/Process_Library/opt_driver_mod.F90
+                         gocart/Process_Library/opt_gocart_mod.F90
+                         gocart/Process_Library/opt_mod.F90
+                         gocart/Process_Library/plume_data_mod.F90
+                         gocart/Process_Library/plume_rise_mod.F90
+                         gocart/Process_Library/plume_scalar_mod.F90
+                         gocart/Process_Library/plume_zero_mod.F90
+                         gocart/Process_Library/seas_data_mod.F90
+                         gocart/Process_Library/seas_mod.F90
+                         gocart/Process_Library/seas_ngac_mod.F90
+                         gocart/Process_Library/vash_settling_mod.F90
+                         PROPERTIES COMPILE_FLAGS "${CMAKE_Fortran_FLAGS_64bit}")
+endif()
+
 target_compile_definitions(gocart PRIVATE "HAS_NETCDF3")
 set_target_properties(gocart PROPERTIES Fortran_MODULE_DIRECTORY
                                         ${CMAKE_CURRENT_BINARY_DIR}/mod)
