A version for CCPP-Chem to couple with Ocean model for S2S, incluing the reading the 1 month daily GBx or GFAS fire data.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "FV3"]
   path = FV3
-  url = https://github.com/NOAA-GSL/fv3atm
-  branch = gsl/develop-chem
+  url = https://github.com/zhanglikate/fv3atm
+  branch = gsl/fire-chem
 [submodule "NEMS"]
   path = NEMS
   url = https://github.com/NOAA-EMC/NEMS
@@ -20,8 +20,8 @@
   branch = gsl/develop
 [submodule "gocart"]
   path = gocart-interface/gocart
-  url = https://github.com/NOAA-GSL/GOCART
-  branch = gsl/develop-chem
+  url = https://github.com/zhanglikate/GOCART
+  branch = gsl/fire-chem
 [submodule "CMakeModules"]
   path = CMakeModules
   url = https://github.com/NOAA-EMC/CMakeModules
