--- a/.gitmodules
+++ b/.gitmodules
@@ -20,8 +20,10 @@
   branch = gsl/develop
 [submodule "gocart"]
   path = gocart-interface/gocart
-  url = https://github.com/NOAA-GSL/GOCART
-  branch = gsl/develop-chem
+  #url = https://github.com/NOAA-GSL/GOCART
+  #branch = gsl/develop-chem
+  url = https://github.com/climbfuji/GOCART
+  branch = dont_use_realstarteight
 [submodule "CMakeModules"]
   path = CMakeModules
   url = https://github.com/NOAA-EMC/CMakeModules
