--- a/gocart-interface/CMakeLists.txt
+++ b/gocart-interface/CMakeLists.txt
@@ -50,39 +50,7 @@ if(32BIT)
   elseif(CMAKE_Fortran_COMPILER_ID MATCHES "GNU")
     set(CMAKE_Fortran_FLAGS_64bit "${CMAKE_Fortran_FLAGS_64bit} -fdefault-real-8")
   endif()
-  SET_SOURCE_FILES_PROPERTIES(gocart/Process_Library/aero_soa_vbs_data_mod.F90
-                         gocart/Process_Library/dep_dry_gocart_mod.F90
-                         gocart/Process_Library/dep_dry_mod.F90
-                         gocart/Process_Library/dep_simple_mod.F90
-                         gocart/Process_Library/dep_vertmx_mod.F90
-                         gocart/Process_Library/dep_wet_ls_mod.F90
-                         gocart/Process_Library/dust_afwa_mod.F90
-                         gocart/Process_Library/dust_data_mod.F90
-                         gocart/Process_Library/dust_fengsha_mod.F90
-                         gocart/Process_Library/dust_gocart_mod.F90
-                         gocart/Process_Library/gocart_aerosols_mod.F90
-                         gocart/Process_Library/gocart_chem_mod.F90
-                         gocart/Process_Library/gocart_diag_mod.F90
-                         gocart/Process_Library/gocart_dmsemis_mod.F90
-                         gocart/Process_Library/gocart_settling_mod.F90
-                         gocart/Process_Library/gsd_chem_config.F90
-                         gocart/Process_Library/gsd_chem_constants.F90
-                         gocart/Process_Library/opt_aer_mod.F90
-                         gocart/Process_Library/opt_aer_out_mod.F90
-                         gocart/Process_Library/opt_aer_ra_mod.F90
-                         gocart/Process_Library/opt_averaging_mod.F90
-                         gocart/Process_Library/opt_data_mod.F90
-                         gocart/Process_Library/opt_driver_mod.F90
-                         gocart/Process_Library/opt_gocart_mod.F90
-                         gocart/Process_Library/opt_mod.F90
-                         gocart/Process_Library/plume_data_mod.F90
-                         gocart/Process_Library/plume_rise_mod.F90
-                         gocart/Process_Library/plume_scalar_mod.F90
-                         gocart/Process_Library/plume_zero_mod.F90
-                         gocart/Process_Library/seas_data_mod.F90
-                         gocart/Process_Library/seas_mod.F90
-                         gocart/Process_Library/seas_ngac_mod.F90
-                         gocart/Process_Library/vash_settling_mod.F90
+  SET_SOURCE_FILES_PROPERTIES(${_gocart_srcs}
                          PROPERTIES COMPILE_FLAGS "${CMAKE_Fortran_FLAGS_64bit}")
 endif()
 
